tests/golden/invalid/builtins-02.rego.stderr
fregot (typecheck error):
  "builtins-02.rego" (line 5, column 3):
  Subtype error:

    5|   0 - set()
         ^^^^^^^^^

  Cannot use type number as set{any}

fregot (typecheck error):
  "builtins-02.rego" (line 9, column 3):
  Subtype error:

    9|   set() - 0
         ^^^^^^^^^

  Cannot use type number as set{any}
